Fix label truncation of multi and single typeahead

--- a/alv-portal-ui/src/app/shared/forms/input/single-typeahead/single-typeahead.component.scss
+++ b/alv-portal-ui/src/app/shared/forms/input/single-typeahead/single-typeahead.component.scss
@@ -25,6 +25,10 @@
       border: 0;
     }
 
+    label {
+      max-width: 100%;
+    }
+
     fieldset {
       height: 21px;
 
